--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0"
+        "php": "^8.1",
+        "illuminate/support": "^9.21|^10.0"
     },
     "autoload-dev": {
         "psr-4": {
